turtleart.lessons.turtleart.Main.DiskFour.scala.error
Source:13: error: not found: value C0lor
	quart(C0lor.Black)
              ^